[package]
name = "commp_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty-s3 = "0.4"
url = "2"
futures-util = { version = "0.3", default-features = false }
log = "0.4"
log4rs = "1"
toml = "0.5"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

multihash = { version = "0.18", default-features = false, features = ["std", "multihash-impl", "sha2"] }
cid = { version = "0.10" }
filecoin-hashers = { git = "https://github.com/gh-efforts/rust-fil-proofs.git", branch = "brf/async", default-features = false, features = ["sha256", "poseidon"] }
fr32 = { git = "https://github.com/gh-efforts/rust-fil-proofs.git", branch = "brf/async", default-features = false, features = ["async"] }
gen_merkletree_cache = { git = "https://github.com/xutianyi1999/gen_merkletree_cache" }

[profile.release]
lto = true
codegen-units = 1