[package]
name = "commp_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusty-s3 = "0.5"
url = "2"
futures-util = { version = "0.3", default-features = false }
log = "0.4"
log4rs = "1"
toml = "0.5"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
parking_lot = "0.12"
once_cell = "1"
chrono = "0.4"
prettytable-rs = "0.10"
arrayvec = "0.7"
sscanf = "0.4"
thread-priority = "0.13"

aws-lc-rs = {version = "1", features = []}
multihash = { version = "0.18", default-features = false }
fr32 = "5"
cid = { version = "0.10" }
gen_merkletree_cache = { git = "https://github.com/gh-efforts/gen_merkletree_cache.git" }

[profile.release]
lto = true
codegen-units = 1